--- a/telegram-shell-bot.yml
+++ b/telegram-shell-bot.yml
@@ -1,4 +1,4 @@
 apps:
-    script: '/bin/sh'
-    name: 'telegram-shell-bot'
-    args:  ['-c', 'pipenv run python -m bot']
+  interpreter: "/bin/bash"
+  script: "poetry"
+  args: ["run", "python", "bot.py"]
