--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A telegram bot to run shell commands"
 authors = ["vicalloy <zbirder@gmail.com>"]
 license = "BSD"
 readme = "README.md"
-packages = [{include = "telegram_shell_bot"}]
+
 
 [tool.black]
 line-length = 88
@@ -31,9 +31,12 @@ known_first_party = []
 skip_gitignore = true
 
 [tool.poetry.dependencies]
-python = "^3.8"
-python-telegram-bot = "^13.14"
+python = "^3.10"
+python-telegram-bot = "^13.15"
 "delegator.py" = "^0.1.1"
+python-dotenv = "^1.2.1"
+urllib3 = "<2.0.0"
+setuptools = "*"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
