--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ python-telegram-bot = "^13.15"
 python-dotenv = "^1.2.1"
 urllib3 = "<2.0.0"
 setuptools = "*"
+PyYAML = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
